--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div id="calculator">
     <div id="screen-container">
-      <div id="screen"></div>
+      <div id="screen" contenteditable="true"></div>
     </div>
 
     <div id="buttons-container">
